# pnm

./: Cargo.toml  README.md
examples/: viewer.rs
src/: decode.rs  decode_body_into.md  encode.rs  encode_into.md  est.md  lib.rs  pam.rs  pbm.rs  pgm.rs  ppm.rs
tdata/: fimg-gray.imgbuf  fimg-gray.pam  fimg-rainbow-transparent.imgbuf  fimg-rainbow-transparent.pam  fimg-rainbow.imgbuf  fimg-rainbowA.ppm  fimg-rgb.pam  fimg-transparent.imgbuf  fimg-transparent.pam  fimg.imgbuf  fimg.pam  fimgA.pbm  fimgA.pgm  fimgR.pbm  fimgR.pgm  fimgR.ppm
